force-app/main/default/objects/ssot__ActionPlanTemplateVersion__dlm/fields/ssot__ActionPlanTemplateId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ActionPlanTemplateId__c</fullName>
    <label>Action Plan Template</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ActionPlanTemplateId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>