force-app/main/default/objects/ssot__ActionPlanTemplateVersion__dlm/fields/ssot__InactivationDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__InactivationDateTime__c</fullName>
    <label>Inactivation Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>InactivationDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>