force-app/main/default/objects/ssot__ActionPlanTemplateVersion__dlm/fields/ssot__rel_1719818167473_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719818167473_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ActionPlanTemplateVersion_ActionPlan_rel</label>
    <referenceTo>ssot__ActionPlanTemplate__dlm</referenceTo>
    <relationshipLabel>ActionPlanTemplateVersion_ActionPlan_rel</relationshipLabel>
    <relationshipName>rel_1719818167473_end</relationshipName>
    <type>Lookup</type>
</CustomField>